внес правки в стили, отсортировал по компонентам

--- a/src/pages/feed/components/header/header-feed.hbs
+++ b/src/pages/feed/components/header/header-feed.hbs
@@ -20,7 +20,7 @@
 
             <a href="#begin">Поиск</a>
             <a href="#begin">Пользователь</a>
-            <button class="btn-signIn ms-3" id="logout">Выйти</a>
+            <button class="btn-red ms-3" id="logout">Выйти</a>
 
         </div>
     </div>
