--- a/src/pages/register/components/RegFooter/RegFooter.hbs
+++ b/src/pages/register/components/RegFooter/RegFooter.hbs
@@ -8,7 +8,7 @@
                     Есть вопросы? Свяжись с нами.
                 </a>
             </p>
-            <ul class="footer-list">
+            <ul class="footer-list-reg">
                 <li>
                     <a role="link" href="https://help.netflix.com/support/412">
                         <span>FAQ</span>
