--- a/src/pages/login/components/body/body.hbs
+++ b/src/pages/login/components/body/body.hbs
@@ -3,7 +3,7 @@
 <div class="login-content">
     <div class="login-form-main">
         <h1 class="login-form-main-title">Авторизация</h1>
-       
+
         <form name="loginForm" action="post">
             <div class="login-control-container">
                 <input
@@ -18,7 +18,7 @@
                     placeholder="Введите пароль"
                     class="login-control">
             </div>
-            <button type="submit" class="btn-signIn  w-100 btn-login">Войти</button>
+            <button type="submit" class="btn-red  w-100 btn-login">Войти</button>
             <div class="login-form-footer">
                 <input type="checkbox"
                     class="custom-checkbox" name
@@ -27,7 +27,7 @@
                     for="checkLog">Запомнить это устройство</label>
             </div>
             <div class="login-footer-other">
-                <span>Недавно на Netflix? <a href>Зарегестрируйтесь</a></span>
+                <span>Недавно на Netflix? <a href="/register1" data-link>Зарегестрируйтесь</a></span>
             </div>
         </form>
     </div>
