--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -7,7 +7,7 @@
                 </div>
 
                 <div class="col d-flex justify-content-end">
-                    <a href="/login" class="btn btn-signIn" data-link>Войти</a>
+                    <a href="/login" class="btn btn-red" data-link>Войти</a>
                 </div>
             </div>
         </div>
@@ -37,7 +37,7 @@
                     <input-continer>
                         <input class="form-input me-3"
                             placeholder="Email" name="email" type="email" name id>
-                        <button class="btn-signIn" type="submit">Начать</button>
+                        <button class="btn-red" type="submit">Начать</button>
                     </input-continer>
                 </form>
             </email-form-container>
