--- a/src/pages/login/components/body/body.css
+++ b/src/pages/login/components/body/body.css
@@ -14,7 +14,7 @@ login-body {
     direction: ltr;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
-    letter-spacing: 0 !important;
+    letter-spacing: 0 ;
     color: #333;
     background: rgba(0, 0, 0, .75);
     margin: 0 auto 90px;
