--- a/src/pages/register/components/CreatePasswordContent/CreatePasswordContent.css
+++ b/src/pages/register/components/CreatePasswordContent/CreatePasswordContent.css
@@ -5,6 +5,6 @@
     color: #333333;
     font-size: 16px;
     margin-bottom: 30px;
-    letter-spacing: 0 !important;
+    letter-spacing: 0 ;
     padding: 20px 32px 60px;
 }
