--- a/src/static/assets/utils.css
+++ b/src/static/assets/utils.css
@@ -1,97 +1,97 @@
 .d-flex {
-    display: flex !important;
+    display: flex ;
 }
 
 .justify-content-start {
-  justify-content: flex-start !important;
+  justify-content: flex-start ;
 }
 
 .justify-content-end {
-  justify-content: flex-end !important;
+  justify-content: flex-end ;
 }
 
 .justify-content-center {
-  justify-content: center !important;
+  justify-content: center ;
 }
 
 .justify-content-between {
-  justify-content: space-between !important;
+  justify-content: space-between ;
 }
 
 .justify-content-around {
-  justify-content: space-around !important;
+  justify-content: space-around ;
 }
 
 .justify-content-evenly {
-  justify-content: space-evenly !important;
+  justify-content: space-evenly ;
 }
 
 .align-items-start {
-  align-items: flex-start !important;
+  align-items: flex-start ;
 }
 
 .align-items-end {
-  align-items: flex-end !important;
+  align-items: flex-end ;
 }
 
 .align-items-center {
-  align-items: center !important;
+  align-items: center ;
 }
 
 .align-items-baseline {
-  align-items: baseline !important;
+  align-items: baseline ;
 }
 
 .align-items-stretch {
-  align-items: stretch !important;
+  align-items: stretch ;
 }
 
 .align-content-start {
-  align-content: flex-start !important;
+  align-content: flex-start ;
 }
 
 .align-content-end {
-  align-content: flex-end !important;
+  align-content: flex-end ;
 }
 
 .align-content-center {
-  align-content: center !important;
+  align-content: center ;
 }
 
 .align-content-between {
-  align-content: space-between !important;
+  align-content: space-between ;
 }
 
 .align-content-around {
-  align-content: space-around !important;
+  align-content: space-around ;
 }
 
 .align-content-stretch {
-  align-content: stretch !important;
+  align-content: stretch ;
 }
 
 .align-self-auto {
-  align-self: auto !important;
+  align-self: auto ;
 }
 
 .align-self-start {
-  align-self: flex-start !important;
+  align-self: flex-start ;
 }
 
 .align-self-end {
-  align-self: flex-end !important;
+  align-self: flex-end ;
 }
 
 .align-self-center {
-  align-self: center !important;
+  align-self: center ;
 }
 
 .align-self-baseline {
-  align-self: baseline !important;
+  align-self: baseline ;
 }
 
 .align-self-stretch {
-  align-self: stretch !important;
+  align-self: stretch ;
 }
 
 .row {
@@ -182,425 +182,425 @@
 }
 
 .m-0 {
-  margin: 0 !important;
+  margin: 0 ;
 }
 
 .m-1 {
-  margin: 0.25rem !important;
+  margin: 0.25rem ;
 }
 
 .m-2 {
-  margin: 0.5rem !important;
+  margin: 0.5rem ;
 }
 
 .m-3 {
-  margin: 1rem !important;
+  margin: 1rem ;
 }
 
 .m-4 {
-  margin: 1.5rem !important;
+  margin: 1.5rem ;
 }
 
 .m-5 {
-  margin: 3rem !important;
+  margin: 3rem ;
 }
 
 .m-auto {
-  margin: auto !important;
+  margin: auto ;
 }
 
 .mx-0 {
-  margin-right: 0 !important;
-  margin-left: 0 !important;
+  margin-right: 0 ;
+  margin-left: 0 ;
 }
 
 .mx-1 {
-  margin-right: 0.25rem !important;
-  margin-left: 0.25rem !important;
+  margin-right: 0.25rem ;
+  margin-left: 0.25rem ;
 }
 
 .mx-2 {
-  margin-right: 0.5rem !important;
-  margin-left: 0.5rem !important;
+  margin-right: 0.5rem ;
+  margin-left: 0.5rem ;
 }
 
 .mx-3 {
-  margin-right: 1rem !important;
-  margin-left: 1rem !important;
+  margin-right: 1rem ;
+  margin-left: 1rem ;
 }
 
 .mx-4 {
-  margin-right: 1.5rem !important;
-  margin-left: 1.5rem !important;
+  margin-right: 1.5rem ;
+  margin-left: 1.5rem ;
 }
 
 .mx-5 {
-  margin-right: 3rem !important;
-  margin-left: 3rem !important;
+  margin-right: 3rem ;
+  margin-left: 3rem ;
 }
 
 .mx-auto {
-  margin-right: auto !important;
-  margin-left: auto !important;
+  margin-right: auto ;
+  margin-left: auto ;
 }
 
 .my-0 {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
+  margin-top: 0 ;
+  margin-bottom: 0 ;
 }
 
 .my-1 {
-  margin-top: 0.25rem !important;
-  margin-bottom: 0.25rem !important;
+  margin-top: 0.25rem ;
+  margin-bottom: 0.25rem ;
 }
 
 .my-2 {
-  margin-top: 0.5rem !important;
-  margin-bottom: 0.5rem !important;
+  margin-top: 0.5rem ;
+  margin-bottom: 0.5rem ;
 }
 
 .my-3 {
-  margin-top: 1rem !important;
-  margin-bottom: 1rem !important;
+  margin-top: 1rem ;
+  margin-bottom: 1rem ;
 }
 
 .my-4 {
-  margin-top: 1.5rem !important;
-  margin-bottom: 1.5rem !important;
+  margin-top: 1.5rem ;
+  margin-bottom: 1.5rem ;
 }
 
 .my-5 {
-  margin-top: 3rem !important;
-  margin-bottom: 3rem !important;
+  margin-top: 3rem ;
+  margin-bottom: 3rem ;
 }
 
 .my-auto {
-  margin-top: auto !important;
-  margin-bottom: auto !important;
+  margin-top: auto ;
+  margin-bottom: auto ;
 }
 
 .mt-0 {
-  margin-top: 0 !important;
+  margin-top: 0 ;
 }
 
 .mt-1 {
-  margin-top: 0.25rem !important;
+  margin-top: 0.25rem ;
 }
 
 .mt-2 {
-  margin-top: 0.5rem !important;
+  margin-top: 0.5rem ;
 }
 
 .mt-3 {
-  margin-top: 1rem !important;
+  margin-top: 1rem ;
 }
 
 .mt-4 {
-  margin-top: 1.5rem !important;
+  margin-top: 1.5rem ;
 }
 
 .mt-5 {
-  margin-top: 3rem !important;
+  margin-top: 3rem ;
 }
 
 .mt-auto {
-  margin-top: auto !important;
+  margin-top: auto ;
 }
 
 .me-0 {
-  margin-right: 0 !important;
+  margin-right: 0 ;
 }
 
 .me-1 {
-  margin-right: 0.25rem !important;
+  margin-right: 0.25rem ;
 }
 
 .me-2 {
-  margin-right: 0.5rem !important;
+  margin-right: 0.5rem ;
 }
 
 .me-3 {
-  margin-right: 1rem !important;
+  margin-right: 1rem ;
 }
 
 .me-4 {
-  margin-right: 1.5rem !important;
+  margin-right: 1.5rem ;
 }
 
 .me-5 {
-  margin-right: 3rem !important;
+  margin-right: 3rem ;
 }
 
 .me-auto {
-  margin-right: auto !important;
+  margin-right: auto ;
 }
 
 .mb-0 {
-  margin-bottom: 0 !important;
+  margin-bottom: 0 ;
 }
 
 .mb-1 {
-  margin-bottom: 0.25rem !important;
+  margin-bottom: 0.25rem ;
 }
 
 .mb-2 {
-  margin-bottom: 0.5rem !important;
+  margin-bottom: 0.5rem ;
 }
 
 .mb-3 {
-  margin-bottom: 1rem !important;
+  margin-bottom: 1rem ;
 }
 
 .mb-4 {
-  margin-bottom: 1.5rem !important;
+  margin-bottom: 1.5rem ;
 }
 
 .mb-5 {
-  margin-bottom: 3rem !important;
+  margin-bottom: 3rem ;
 }
 
 .mb-auto {
-  margin-bottom: auto !important;
+  margin-bottom: auto ;
 }
 
 .ms-0 {
-  margin-left: 0 !important;
+  margin-left: 0 ;
 }
 
 .ms-1 {
-  margin-left: 0.25rem !important;
+  margin-left: 0.25rem ;
 }
 
 .ms-2 {
-  margin-left: 0.5rem !important;
+  margin-left: 0.5rem ;
 }
 
 .ms-3 {
-  margin-left: 1rem !important;
+  margin-left: 1rem ;
 }
 
 .ms-4 {
-  margin-left: 1.5rem !important;
+  margin-left: 1.5rem ;
 }
 
 .ms-5 {
-  margin-left: 3rem !important;
+  margin-left: 3rem ;
 }
 
 .ms-auto {
-  margin-left: auto !important;
+  margin-left: auto ;
 }
 
 .p-0 {
-  padding: 0 !important;
+  padding: 0 ;
 }
 
 .p-1 {
-  padding: 0.25rem !important;
+  padding: 0.25rem ;
 }
 
 .p-2 {
-  padding: 0.5rem !important;
+  padding: 0.5rem ;
 }
 
 .p-3 {
-  padding: 1rem !important;
+  padding: 1rem ;
 }
 
 .p-4 {
-  padding: 1.5rem !important;
+  padding: 1.5rem ;
 }
 
 .p-5 {
-  padding: 3rem !important;
+  padding: 3rem ;
 }
 
 .px-0 {
-  padding-right: 0 !important;
-  padding-left: 0 !important;
+  padding-right: 0 ;
+  padding-left: 0 ;
 }
 
 .px-1 {
-  padding-right: 0.25rem !important;
-  padding-left: 0.25rem !important;
+  padding-right: 0.25rem ;
+  padding-left: 0.25rem ;
 }
 
 .px-2 {
-  padding-right: 0.5rem !important;
-  padding-left: 0.5rem !important;
+  padding-right: 0.5rem ;
+  padding-left: 0.5rem ;
 }
 
 .px-3 {
-  padding-right: 1rem !important;
-  padding-left: 1rem !important;
+  padding-right: 1rem ;
+  padding-left: 1rem ;
 }
 
 .px-4 {
-  padding-right: 1.5rem !important;
-  padding-left: 1.5rem !important;
+  padding-right: 1.5rem ;
+  padding-left: 1.5rem ;
 }
 
 .px-5 {
-  padding-right: 3rem !important;
-  padding-left: 3rem !important;
+  padding-right: 3rem ;
+  padding-left: 3rem ;
 }
 
 .py-0 {
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
+  padding-top: 0 ;
+  padding-bottom: 0 ;
 }
 
 .py-1 {
-  padding-top: 0.25rem !important;
-  padding-bottom: 0.25rem !important;
+  padding-top: 0.25rem ;
+  padding-bottom: 0.25rem ;
 }
 
 .py-2 {
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
+  padding-top: 0.5rem ;
+  padding-bottom: 0.5rem ;
 }
 
 .py-3 {
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
+  padding-top: 1rem ;
+  padding-bottom: 1rem ;
 }
 
 .py-4 {
-  padding-top: 1.5rem !important;
-  padding-bottom: 1.5rem !important;
+  padding-top: 1.5rem ;
+  padding-bottom: 1.5rem ;
 }
 
 .py-5 {
-  padding-top: 3rem !important;
-  padding-bottom: 3rem !important;
+  padding-top: 3rem ;
+  padding-bottom: 3rem ;
 }
 
 .pt-0 {
-  padding-top: 0 !important;
+  padding-top: 0 ;
 }
 
 .pt-1 {
-  padding-top: 0.25rem !important;
+  padding-top: 0.25rem ;
 }
 
 .pt-2 {
-  padding-top: 0.5rem !important;
+  padding-top: 0.5rem ;
 }
 
 .pt-3 {
-  padding-top: 1rem !important;
+  padding-top: 1rem ;
 }
 
 .pt-4 {
-  padding-top: 1.5rem !important;
+  padding-top: 1.5rem ;
 }
 
 .pt-5 {
-  padding-top: 3rem !important;
+  padding-top: 3rem ;
 }
 
 .pe-0 {
-  padding-right: 0 !important;
+  padding-right: 0 ;
 }
 
 .pe-1 {
-  padding-right: 0.25rem !important;
+  padding-right: 0.25rem ;
 }
 
 .pe-2 {
-  padding-right: 0.5rem !important;
+  padding-right: 0.5rem ;
 }
 
 .pe-3 {
-  padding-right: 1rem !important;
+  padding-right: 1rem ;
 }
 
 .pe-4 {
-  padding-right: 1.5rem !important;
+  padding-right: 1.5rem ;
 }
 
 .pe-5 {
-  padding-right: 3rem !important;
+  padding-right: 3rem ;
 }
 
 .pb-0 {
-  padding-bottom: 0 !important;
+  padding-bottom: 0 ;
 }
 
 .pb-1 {
-  padding-bottom: 0.25rem !important;
+  padding-bottom: 0.25rem ;
 }
 
 .pb-2 {
-  padding-bottom: 0.5rem !important;
+  padding-bottom: 0.5rem ;
 }
 
 .pb-3 {
-  padding-bottom: 1rem !important;
+  padding-bottom: 1rem ;
 }
 
 .pb-4 {
-  padding-bottom: 1.5rem !important;
+  padding-bottom: 1.5rem ;
 }
 
 .pb-5 {
-  padding-bottom: 3rem !important;
+  padding-bottom: 3rem ;
 }
 
 .ps-0 {
-  padding-left: 0 !important;
+  padding-left: 0 ;
 }
 
 .ps-1 {
-  padding-left: 0.25rem !important;
+  padding-left: 0.25rem ;
 }
 
 .ps-2 {
-  padding-left: 0.5rem !important;
+  padding-left: 0.5rem ;
 }
 
 .ps-3 {
-  padding-left: 1rem !important;
+  padding-left: 1rem ;
 }
 
 .ps-4 {
-  padding-left: 1.5rem !important;
+  padding-left: 1.5rem ;
 }
 
 .ps-5 {
-  padding-left: 3rem !important;
+  padding-left: 3rem ;
 }
 
 .w-25 {
-  width: 25% !important;
+  width: 25% ;
 }
 
 .w-50 {
-  width: 50% !important;
+  width: 50% ;
 }
 
 .w-75 {
-  width: 75% !important;
+  width: 75% ;
 }
 
 .w-100 {
-  width: 100% !important;
+  width: 100% ;
 }
 
 .h-25 {
-  height: 25% !important;
+  height: 25% ;
 }
 
 .h-50 {
-  height: 50% !important;
+  height: 50% ;
 }
 
 .h-75 {
-  height: 75% !important;
+  height: 75% ;
 }
 
 .h-100 {
-  height: 100% !important;
+  height: 100% ;
 }
 
 .container,
