--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -78,7 +78,7 @@
             </div>
             <div class="col" style="padding-left: 6px;">
                 <div style="position: relative;">
-                    <img src="src/static/img/tv.png" alt>
+                    <img src="src/static/img/tv.webp" alt>
                     <div class="video-container">
                         <video autoplay playsinline muted loop>
                             <source src="src/static/video/tv-main.m4v"
@@ -94,7 +94,7 @@
         <div class="row container">
             <div class="col">
                 <div style="position: relative;">
-                    <img src="src/static/img/device-pile.png" alt="imac">
+                    <img src="src/static/img/device-pile.webp" alt="imac">
                     <div class="video-container-imac">
                         <video autoplay playsinline muted loop>
                             <source src="src/static/video/video-devices.m4v"
@@ -125,7 +125,7 @@
 
             <div class="col">
                 <div style="position: relative;">
-                    <img src="src/static/img/kids.png" alt="kids">
+                    <img src="src/static/img/kids.webp" alt="kids">
 
                 </div>
             </div>
@@ -141,7 +141,7 @@
 
                     <div class="mobile-container-1">
                         <div class="mobile-col-1">
-                            <img alt="poster" src="src/static/img/boxshot.png"
+                            <img alt="poster" src="src/static/img/boxshot.jpg"
                                 class="mobile-image">
                         </div>
                         <div class="mobile-col-2">
