--- a/src/pages/register/components/FinishAccContent/FinishAccContent.css
+++ b/src/pages/register/components/FinishAccContent/FinishAccContent.css
@@ -19,7 +19,7 @@
     margin: 100px 0 20px;
     width: 260px;
     display: block;
-    background: url(/img/devices.png) no-repeat 50% 50%;
+    background: url(/img/devices.webp) no-repeat 50% 50%;
     background-size: 260px;
     height: 90px;
 }
