--- a/src/pages/feed/components/content/genre/genre.css
+++ b/src/pages/feed/components/content/genre/genre.css
@@ -13,6 +13,10 @@
     transition: transform 0.3s ease;
 }
 
+.genre-card{
+    min-height: 350px;
+    min-width: 250px;
+}
 
 .genre-card>img {
     overflow: hidden;
@@ -23,4 +27,5 @@
 .genre-card:hover {
     border: 5px solid rgba(255, 255, 255, 0.5);
     margin-top: -5px;
+    box-shadow: 0 0 60px red;
 }
