--- a/src/pages/login/components/body/body.hbs
+++ b/src/pages/login/components/body/body.hbs
@@ -7,7 +7,7 @@
         <form name="loginForm" action="post">
             <div class="login-control-container">
                 <input
-                    type="text"
+                    type="email"
                     name="email"
                     placeholder="Введите логин или почту"
                     class="login-control">
