--- a/src/pages/feed/components/content/genre/genre.hbs
+++ b/src/pages/feed/components/content/genre/genre.hbs
@@ -1,8 +1,8 @@
 <div class="ms-4">
     <h1 >{{genreTitle}}</h1>
 </div>
-<div class="genre-carousel" id="{{id_carousel}}">
-    <div class="genre-card-container" id="{{id_container}}">
+<div class="genre-carousel" id="{{idCarousel}}">
+    <div class="genre-card-container" id="{{idContainer}}">
         {{#each genreContent}}
         <a href="/feed/{{this.id}}" data-id="{{this.id}}" class="ms-2 genre-card-link"
             data-link>
