--- a/src/pages/register/components/Header/Header.hbs
+++ b/src/pages/register/components/Header/Header.hbs
@@ -1,5 +1,5 @@
 <header-reg>
-    <div class="header-content {{#each classes}} {{this}} {{/each}}">
+    <div class="{{#each classes}} {{this}} {{/each}}">
         <div class="row">
 
         </div>
