--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -21,19 +21,21 @@ login {
     color: #fff;
 }
 
+login-body {
+    display: block;
+    height: 100vh;
+}
+
 login-wraper {
-    direction: ltr;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     margin: 0;
     min-height: 100%;
     padding: 0;
     z-index: 0;
     background-color: #000;
     color: #fff;
-
-
 }
 
 login-background {
@@ -41,7 +43,7 @@ login-background {
     display: block;
     position: absolute;
     z-index: -1;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     border: 0;
     min-height: 100%;
     min-width: 100%;
@@ -57,12 +59,10 @@ login-background {
 }
 
 .login-image {
-    -webkit-font-smoothing: antialiased;
-    direction: ltr;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
     color: #fff;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     border: 0;
     min-height: 100%;
     min-width: 100%;
@@ -85,26 +85,19 @@ login-header {
 }
 
 login-footer {
-    direction: ltr;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     color: #757575;
     font-size: 1em;
     min-width: 190px;
-    padding-bottom: 20px;
-    position: absolute;
-    bottom: 0;
     width: 100%;
     background: rgba(0, 0, 0, .75);
-    margin-top: 0;
 }
 
 site-footer {
-    -webkit-font-smoothing: antialiased;
-    direction: ltr;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 1em;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     width: 90%;
     padding: 30px 0;
     margin: 0 auto;
@@ -114,23 +107,19 @@ site-footer {
 
 
 .footer-top {
-    -webkit-font-smoothing: antialiased;
-    direction: ltr;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 1em;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     margin: 0 0 30px;
     padding: 0;
     color: #737373;
 }
 
 .footer-top-a {
-    -webkit-font-smoothing: antialiased;
-    direction: ltr;
     font-weight: 500;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 1em;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     text-decoration: none;
     background-color: transparent;
     color: #737373;
@@ -145,9 +134,7 @@ site-footer {
 }
 
 .login-checkbox {
-    -webkit-font-smoothing: antialiased;
-    direction: ltr;
-    letter-spacing: 0 ;
+    letter-spacing: 0;
     color: inherit;
     font: inherit;
     margin: 0;
@@ -161,7 +148,7 @@ site-footer {
     top: 0;
 }
 
-.login-form-footer{
+.login-form-footer {
     margin-top: 1.5rem;
 }
 
