--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -37,7 +37,7 @@
                     <input-continer>
                         <input class="form-input me-3"
                             placeholder="Email" name="email" type="email" name id>
-                        <button class="btn-red" type="submit">Начать</button>
+                        <button class="btn-red" type="submit" data-link>Начать</button>
                     </input-continer>
                 </form>
             </email-form-container>
