--- a/src/pages/register/components/SubmitRegisterButton/SubmitRegisterButton.hbs
+++ b/src/pages/register/components/SubmitRegisterButton/SubmitRegisterButton.hbs
@@ -1,5 +1,5 @@
 <div class="submit-register-container">
-    <button type="submit" class="submit-register-button">
+    <button type="submit" class="submit-register-button" data-link>
         Далее
     </button>
 </div>
