--- a/src/pages/login/components/body/body.hbs
+++ b/src/pages/login/components/body/body.hbs
@@ -18,7 +18,7 @@
                     placeholder="Введите пароль"
                     class="login-control">
             </div>
-            <button type="submit" class="btn-red  w-100 btn-login" data-link>Войти</button>
+            <button type="submit" class="btn-red  w-100 btn-login">Войти</button>
             <div class="login-form-footer">
                 <input type="checkbox"
                     class="custom-checkbox" name
