--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -3,7 +3,9 @@
         <div class="header-content">
             <div class="row">
                 <div class="col justify-content-start">
-                    <img src="src/static/img/logo.svg" alt="logo">
+                    <a href="/" data-link>
+                        <img src="src/static/img/logo.svg" alt="logo">
+                    </a>
                 </div>
 
                 <div class="col d-flex justify-content-end">
@@ -36,7 +38,8 @@
                         подписку.</h3>
                     <input-continer>
                         <input class="form-input me-3"
-                            placeholder="Email" name="email" type="email" name id>
+                            placeholder="Email" name="email" type="email" name
+                            id>
                         <button class="btn-red" type="submit">Начать</button>
                     </input-continer>
                 </form>
