--- a/src/pages/register/components/NetflixLogo/NetflixLogo.hbs
+++ b/src/pages/register/components/NetflixLogo/NetflixLogo.hbs
@@ -1,3 +1,5 @@
 <div class="col justify-content-start">
-    <img class="w-25 ps-2" src="src/static/img/logo.svg" alt="logo">
+    <a href="/" data-link>
+        <img class="w-25 ps-2" src="src/static/img/logo.svg" alt="logo">
+    </a>
 </div>
