--- a/src/pages/login/components/header/header-login.hbs
+++ b/src/pages/login/components/header/header-login.hbs
@@ -1,7 +1,9 @@
 <div class="header-content">
     <div class="row">
         <div class="col justify-content-start">
-            <img src="src/static/img/logo.svg" alt="logo">
+            <a href="/" data-link>
+                <img src="src/static/img/logo.svg" alt="logo">
+            </a>
         </div>
     </div>
 </div>
