--- a/src/pages/login/components/body/body.hbs
+++ b/src/pages/login/components/body/body.hbs
@@ -27,7 +27,7 @@
                     for="checkLog">Запомнить это устройство</label>
             </div>
             <div class="login-footer-other">
-                <span>Недавно на Netflix? <a href="/register1" data-link>Зарегестрируйтесь</a></span>
+                <span>Недавно на Netflix? <a href="/register1" data-link>Зарегистрируйтесь</a></span>
             </div>
         </form>
     </div>
