--- a/src/pages/login/components/header/header-login.hbs
+++ b/src/pages/login/components/header/header-login.hbs
@@ -1,7 +1,7 @@
 <div class="header-content">
     <div class="row">
         <div class="col justify-content-start">
-            <a href="/" data-link>
+            <a href="/" id="login-link" data-link>
                 <img src="src/static/img/logo.svg" alt="logo">
             </a>
         </div>
