--- a/src/pages/feed/components/header/header-feed.hbs
+++ b/src/pages/feed/components/header/header-feed.hbs
@@ -3,9 +3,8 @@
         <div class="col justify-content-start">
             <div class="row">
                 <div class="col-3">
-                    <a href="/feed" data-link>
-                        <img src="src/static/img/logo.svg" alt="logo">
-                    </a>
+                    <a href="/feed" data-link class="logo-link"></a>
+                    <img src="src/static/img/logo.svg" alt="logo">
                 </div>
                 <div
                     class="ml-3 col d-flex align-items-center feed-header-menu margin-a">
