--- a/src/pages/main/main-page.hbs
+++ b/src/pages/main/main-page.hbs
@@ -3,9 +3,8 @@
         <div class="header-content">
             <div class="row">
                 <div class="col justify-content-start">
-                    <a href="/" data-link>
-                        <img src="src/static/img/logo.svg" alt="logo">
-                    </a>
+                    <a href="/" data-link class="logo-link"></a>
+                    <img src="src/static/img/logo.svg" alt="logo">
                 </div>
 
                 <div class="col d-flex justify-content-end">
