fix link logo footer

--- a/src/pages/feed/components/footer/footer-feed.hbs
+++ b/src/pages/feed/components/footer/footer-feed.hbs
@@ -5,14 +5,15 @@
 
         <div class="row py-5">
             <div class="col d-flex align-items-center border-f">
+                <a href="/" data-link class="logo-link"></a>
                 <img src="src/static/img/logo.svg" alt>
             </div>
             <div class="col menu-a border-f">
-                <a href="">Контакты</a>
-                <a href="">О компании</a>
+                <a href>Контакты</a>
+                <a href>О компании</a>
             </div>
             <div class="col menu-a">
-                <a href="">Только на Нетфликс</a>
+                <a href>Только на Нетфликс</a>
             </div>
         </div>
     </div>
