--- a/src/pages/feed/components/header/header-feed.hbs
+++ b/src/pages/feed/components/header/header-feed.hbs
@@ -1,27 +1,1 @@
- <div class="header-content">
-    <div class="row">
-        <div class="col justify-content-start">
-            <div class="row">
-                <div class="col-3">
-                    <img src="src/static/img/logo.svg" alt="logo">
-                </div>
-                <div
-                    class="ml-3 col d-flex align-items-center feed-header-menu margin-a">
-                    <a href="/" data-link>Начало</a>
-                    <a href="/serials">Сериалы</a>
-                    <a href="/films">Фильмы</a>
-                    <a href="/list">Избранное</a>
-                </div>
-            </div>
-
-        </div>
-        <div
-            class="col d-flex align-items-center feed-header-menu margin-a justify-content-end">
-
-            <a href="#begin">Поиск</a>
-            <a href="#begin">Пользователь</a>
-            <button class="btn-red ms-3" id="logout">Выйти</a>
-
-        </div>
-    </div>
-</div>
+{{> partial-header kind="feed-page" feedPage=true}}
