--- a/src/pages/feed/components/footer/footer-feed.hbs
+++ b/src/pages/feed/components/footer/footer-feed.hbs
@@ -1,19 +1,1 @@
-
-<div class="border-feed-footer-top pt-5">
-    <div class="container netflix-light"
-        style="padding: 30px 0; margin: 0 auto; max-width: 1000px;">
-
-        <div class="row py-5">
-            <div class="col d-flex align-items-center border-f">
-                <img src="src/static/img/logo.svg" alt>
-            </div>
-            <div class="col menu-a border-f">
-                <a href="">Контакты</a>
-                <a href="">О компании</a>
-            </div>
-            <div class="col menu-a">
-                <a href="">Только на Нетфликс</a>
-            </div>
-        </div>
-    </div>
-</div>
+{{> partial-footer}}
