--- a/src/pages/login/components/header/header-login.hbs
+++ b/src/pages/login/components/header/header-login.hbs
@@ -1,7 +1,1 @@
-<div class="header-content">
-    <div class="row">
-        <div class="col justify-content-start">
-            <img src="src/static/img/logo.svg" alt="logo">
-        </div>
-    </div>
-</div>
+{{> partial-header loginPage=true}}
