fix login page. styles to BAM & create partials

--- a/src/pages/main/components/main-form.hbs
+++ b/src/pages/main/components/main-form.hbs
@@ -18,7 +18,7 @@
                 <div class="main-form__input">
                     {{> input-control extraClass="me-3" placeholder="Email"
                     name="email" type="email"}}
-                    {{> button type="submit" label="Начать" extraClass="button"}}
+                    {{> button type="submit" label="Начать" kind="main-form"}}
                 </div>
             </form>
         </div>
