--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,218 +1,57 @@
-@import url(components/body/body.css);
-
-content-login-form {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: transparent;
-    margin: 0 auto -236px;
-    max-width: 450px;
-    min-height: 100vh;
-    padding: 0 5%;
+.login-page {
+    display: flex;
+    flex-direction: column;
 }
 
-login {
+.login-page__login-background {
+    height: calc(100vh - 206px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    transform: scale(1.25) translateY(-10%);
+    background-image: url(../../static/img/main.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+.login-page__login-content {
+    position: absolute;
+    margin-left: calc((100% - 450px)/2);
+    margin-right: calc((100% - 450px)/2);
+    margin-top: 90px;
+    -webkit-font-smoothing: antialiased;
     direction: ltr;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
     font-size: 16px;
     letter-spacing: 0;
-    height: 100%;
-    background-color: transparent;
-    color: #fff;
-}
-
-login-body {
-    display: block;
-    height: 100vh;
-}
-
-login-wraper {
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    font-size: 16px;
-    letter-spacing: 0;
-    margin: 0;
-    min-height: 100%;
-    padding: 0;
-    z-index: 0;
-    background-color: #000;
-    color: #fff;
-}
-
-login-background {
-    opacity: .5;
-    display: block;
-    position: absolute;
-    z-index: -1;
-    letter-spacing: 0;
-    border: 0;
-    min-height: 100%;
-    min-width: 100%;
-    background-image: url(../../static/img/main.jpg);
-    background-size: cover;
-    /* Растягиваем картинку, чтобы она полностью покрывала блок */
-    background-repeat: no-repeat;
-    /* Запрещаем повторение картинки */
-    background-position: center center;
-    /* Выравниваем картинку по центру блока */
-    background-attachment: fixed;
-    /* Зафиксировать фоновое изображение */
-}
-
-.login-image {
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    font-size: 16px;
-    color: #fff;
-    letter-spacing: 0;
-    border: 0;
-    min-height: 100%;
-    min-width: 100%;
-}
-
-login-header {
-    background: linear-gradient(180deg, rgba(0, 0, 0, .5) 0, transparent);
-    border-bottom: transparent;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-
-.body-margin {
-    display: block;
-    top: 0;
-    width: 450px;
-    height: 91px;
-}
-
-login-footer {
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    letter-spacing: 0;
-    color: #757575;
-    font-size: 1em;
-    min-width: 190px;
-    width: 100%;
+    color: #333;
     background: rgba(0, 0, 0, .75);
-}
-
-site-footer {
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    font-size: 1em;
-    letter-spacing: 0;
-    width: 90%;
-    padding: 30px 0;
-    margin: 0 auto;
-    max-width: 1000px;
-    color: #737373;
-}
-
-
-.footer-top {
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    font-size: 1em;
-    letter-spacing: 0;
-    margin: 0 0 30px;
-    padding: 0;
-    color: #737373;
-}
-
-.footer-top-a {
-    font-weight: 500;
-    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
-    font-size: 1em;
-    letter-spacing: 0;
-    text-decoration: none;
-    background-color: transparent;
-    color: #737373;
-}
-
-.btn-login {
+    max-width: 450px;
+    min-height: 550px;
     border-radius: 4px;
-    font-size: 16px;
-    font-weight: 500;
-    padding: 16px;
-    margin: 24px 0 12px;
 }
 
-.login-checkbox {
-    letter-spacing: 0;
-    color: inherit;
-    font: inherit;
+.login-page__form {
+    color: #fff;
+    padding: 60px 68px 40px;
+
+}
+
+.login-page__form-title {
     margin: 0;
-    line-height: normal;
-    box-sizing: border-box;
-    padding: 0;
-    margin-right: 10px;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 0;
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 28px;
 }
 
-.login-form-footer {
+.login-page__form-action {
+    color: #737373;
     margin-top: 1.5rem;
 }
 
-.login-checkbox-label {
-    color: #b3b3b3;
-    font-size: 13px;
-    font-weight: 400;
-}
-
-.custom-checkbox {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-}
-
-.custom-checkbox+label {
-    display: inline-flex;
-    align-items: center;
-}
-
-.custom-checkbox+label::before {
-    content: '';
-    width: 16px;
-    height: 16px;
-    display: inline-block;
-    flex-shrink: 0;
-    flex-grow: 0;
-    border: 1px solid #adb5bd;
-    border-radius: 0.25em;
-    margin-right: 0.5em;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 50% 50%;
-}
-
-.custom-checkbox:checked+label::before {
-    border-color: #737373;
-    background-color: #737373;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-}
-
-/* стили при наведении курсора на checkbox */
-.custom-checkbox:not(:disabled):not(:checked)+label:hover::before {
-    border-color: #737373;
-    background-color: #737373c1;
-}
-
-/* стили для активного состояния чекбокса (при нажатии на него) */
-.custom-checkbox:not(:disabled):active+label::before {
-    background-color: #737373;
-    border-color: #737373;
-}
-
-/* стили для чекбокса, находящегося в фокусе */
-.custom-checkbox:focus+label::before {
-    box-shadow: 0 0 0 0.2rem rgba(114, 116, 115, 0.468);
-}
-
-/* стили для чекбокса, находящегося в фокусе и не находящегося в состоянии checked */
-.custom-checkbox:focus:not(:checked)+label::before {
-    border-color: #80bdff;
-}
-
-/* стили для чекбокса, находящегося в состоянии disabled */
-.custom-checkbox:disabled+label::before {
-    background-color: #e9ecef;
+.login-page__form-action-link {
+    color: #fff;
 }
