--- a/src/partial/input-control/input-control.css
+++ b/src/partial/input-control/input-control.css
@@ -12,3 +12,14 @@
     font-size: 16px;
     font-weight: 100;
 }
+
+.input-control[kind="login-page"] {
+    margin-bottom: 16px;
+    background: #333;
+    border: 0;
+    font-family: Netflix;
+    max-width: -webkit-fill-available;
+    color: #8c8c8c;
+    height: 34px;
+    line-height: normal;
+}
