--- a/src/partial/input-control/input-control.hbs
+++ b/src/partial/input-control/input-control.hbs
@@ -1,3 +1,3 @@
-<input class="input-control {{extraClass}}"
+<input class="input-control" kind="{{kind}}"
     placeholder="{{placeholder}}" name="{{name}}" type="{{type}}"
     id="{{id}}">
